--- a/styles/variables.css
+++ b/styles/variables.css
@@ -3,8 +3,8 @@
 :root {
   --bg-gradient: url(../images/bg-gradient-light.png),
     linear-gradient(180deg, #e7e7e7 0%, #1a1a1a 100%);
-  --font-main: "Inter", sans-serif;
-  --font-accent: "PressStart2P", sans-serif;
+  --font-main: "Inter";
+  --font-accent: "PressStart2P";
   --color-main: #000000;
   --section-title-font-weight-regular: 400;
   --section-title-font-weight-bold: 700;
